refactor(logger): rename globalContext

--- a/contrib/wild_wyss/src/logger/example/loggerExample.html
+++ b/contrib/wild_wyss/src/logger/example/loggerExample.html
@@ -15,7 +15,7 @@
 <div class="container">
 
     <fieldset>
-        <legend>Select a Global Log Level</legend>
+        <legend>Select a Logging Level</legend>
         <div>
             <input type="radio" id="log-level-trace" name="log-level" value="trace" checked>
             <label for="log-level-trace">Trace</label>
@@ -85,9 +85,9 @@
     </div>
     <div >
         <label class="tooltip" for="context-global">
-            Global Logger Context:
-            <span class="tooltip-content">The global context enables or disables logger with a matching context.
-                If the global context is a prefix of a logger context, the logger's messages will be processed.
+            Logging context:
+            <span class="tooltip-content">The logging context enables or disables logger with a matching context.
+                If the logging context is a prefix of a logger context, the logger's messages will be processed.
             </span>
         </label>
     </div>
