feat(iterator): implement fizz buzz example

--- a/contrib/wild_wyss/src/iterator/example/FizzBuzz.html
+++ b/contrib/wild_wyss/src/iterator/example/FizzBuzz.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Fizz Buzz Example</title>
+  <script type="module" src="starter.js"></script>
 </head>
 <body>
-$END$
+  <div id="root"></div>
 </body>
 </html>
