--- a/contrib/wild_wyss/src/iterator/example/fibonacci/Fibonacci.html
+++ b/contrib/wild_wyss/src/iterator/example/fibonacci/Fibonacci.html
@@ -9,7 +9,7 @@
 <div>
   <label for="amount">Amount of Squares:</label>
   <input type="number" id="amount">
-  <label for="amount">Square size factor:</label>
+  <label for="scale">Square size factor:</label>
   <input type="number" id="scale">
 </div>
 <div style="position: relative" id="root"></div>
