--- a/contrib/wild_wyss/src/iterator/examples/fizzbuzz/FizzBuzz.html
+++ b/contrib/wild_wyss/src/iterator/examples/fizzbuzz/FizzBuzz.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Fizz Buzz Example</title>
-  <link rel="shortcut icon" type="image/png" href="../../../../../docs/img/logo/logo-60x54.png"/>
-  <link rel="stylesheet" href="../../../../../docs/css/kolibri-base.css">
+  <link rel="shortcut icon" type="image/png" href="../../../../../../docs/img/logo/logo-60x54.png"/>
+  <link rel="stylesheet" href="../../../../../../docs/css/kolibri-base.css">
   <script type="module" src="starter.js"></script>
   <style>
       .rulesGrid{
