navigation: more streamlining and example inclusion

--- a/contrib/p6_schnidrig_altermatt/prototype/getting-started-tutorial/index.html
+++ b/contrib/p6_schnidrig_altermatt/prototype/getting-started-tutorial/index.html
@@ -28,5 +28,5 @@
         <div id="debug"></div>
         <div id="content"></div>
     </body>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app-solution.js"></script>
 </html>
