only keep index.html on top level and move all other static html files under /docs

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <p>
             Classic MVC and the <em>Projector Pattern</em> lead us
             from simple to more-and-more advanced web clients as shown in the
-            <a href="examples.html">examples</a>. The UI becomes rich, reliable,
+            <a href="docs/examples.html">examples</a>. The UI becomes rich, reliable,
             consistent and efficient to build and maintain.
         </p>
         <p>
@@ -147,7 +147,7 @@
 
     <section>
         <h2>Examples</h2>
-        <p>Browse through many <a href="examples.html">examples</a>.
+        <p>Browse through many <a href="docs/examples.html">examples</a>.
         </p>
     </section>
 
@@ -175,7 +175,7 @@
 
     <section>
         <h2>Why is Kolibri the way it is?</h2>
-        <p>Have a look at our <a href="philosophy.html">philosophy</a>.
+        <p>Have a look at our <a href="docs/philosophy.html">philosophy</a>.
         </p>
     </section>
 
@@ -188,7 +188,7 @@
         </p>
         <p>
             Please have a look at how to
-            <a href="philosophy.html#installation">install without dependencies</a>.
+            <a href="docs/philosophy.html#installation">install without dependencies</a>.
         </p>
     </section>
 
