feature: next async relay scenario working with two observable map clients and orchestrating scheduler

--- a/src/kolibri/observable/asyncRelayExample.html
+++ b/src/kolibri/observable/asyncRelayExample.html
@@ -29,6 +29,7 @@
     import {AsyncRelay}     from "./asyncRelay.js";
     import {ObservableMap}  from "./observableMap.js";
     import {Walk}           from "../sequence/constructors/range/range.js";
+    import {Scheduler}      from "../dataflow/dataflow.js";
 
     // setting up and binding om1
     const om1 = ObservableMap("om1",0);
@@ -65,22 +66,17 @@
     AsyncRelay(rom)(om1);
     AsyncRelay(rom)(om2);
 
-    // issue a lot of concurrent changes (note the use of setTimeout, we need to set values in a UI action)
-    Walk(50).forEach$(n=> {
-            om1.setValue("sharedInput", Object(n))
+    const appScheduler = Scheduler();
+
+    // issue a lot of concurrent changes (note the use of appScheduler to sequence updates)
+
+    Walk(50).forEach$( n => {
+        appScheduler.addOk(_ => om1.setValue("sharedInput", Object(n)));
     });
 
-    setTimeout( _=> {
-        Walk(50).forEach$(n=> {
-                om2.setValue("sharedInput", n*10)
-        });
-    },100);
-
-    setTimeout( _=> {
-        Walk(50).forEach$(n=> {
-                rom.setValue("sharedInput", n*100)
-        });
-    },200);
+    Walk(50).forEach$( n => {
+        appScheduler.addOk(_ => om2.setValue("sharedInput", n * 10));
+    });
 
 </script>
 
